# nex-lang

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  examples  makefile
cpp_interm_repr/: ex_first_prog.cc
cpp_iterm_repr/: ex_labels.cc  ex_write_file.cc
docs/: nex-lang-library.md  nex-lang-reference.md
emulation/: Cargo.toml
emulation/src/: main.rs  memory.rs  mips_cpu.rs  mips_state.rs
examples/: CMakeLists.txt  ex_assembly.cc  ex_first_prog.cc  ex_flatten.cc  ex_if_stmts.cc  ex_ifstmts.cc  ex_labels.cc  ex_variables.cc  ex_write_file.cc  fibonacci_module.nl  grapher.nl  test_arr.nl  test_fibonacci.nl  test_heap.nl  test_list_module.nl  test_math_module.nl  test_max.nl  test_min.nl  test_print.nl  test_print_char.nl  test_print_module.nl  test_print_num.nl  test_println.nl  test_string_module.nl  test_type_inference.nl  test_type_mismatch_error.nl
src/: compile.cc  compile.h  main.cc
src/code_gen/: code_gen.cc  code_gen.h  lang_type.h  type_tree.cc
src/compile/: compile.cc  compile_procedure.cc  compile_procedure.h  nl_lib.cc  nl_lib.h
src/compile/nl_lib/: list_module.nl  math_module.nl  print_module.nl  string_module.nl
src/exceptions/: compile_error.cc  compile_error.h  duplicate_symbol_error.cc  duplicate_symbol_error.h  parsing_error.cc  parsing_error.h  scanning_error.cc  scanning_error.h  symbol_not_found_error.cc  symbol_not_found_error.h  type_mismatch_error.cc  type_mismatch_error.h
src/lex_parse/: ast_node.cc  ast_node.h  dfa.h  grammar.h  grammar.txt  lang.cc  lang.h  lang_grammar.txt  memo_map.cc  memo_map.h  nex_lang.cc  nl_type.cc  nl_type.h  parse_cyk.cc  parse_cyk.h  parse_earley.cc  parse_earley.h  parsing.cc  parsing.h  post_processing.cc  post_processing.h  scanning.cc  scanning.h  state.cc  state.h  token.cc  token.h  typed_identifiers.cc  typed_identifiers.h
src/memory_management/: chunk.cc  chunk.h  heap.cc  heap.h  stack.cc  stack.h
src/nex_lang/: nex_lang.cc  nex_lang.h  nex_lang_grammar.txt  nex_lang_parsing.cc  nex_lang_parsing.h  nex_lang_scanning.cc  nex_lang_scanning.h
src/nex_lang/post_processing/: extract_fns.cc  extract_fns.h  extract_imports.cc  extract_imports.h  extract_s.cc  extract_s.h  extract_symbols.cc  extract_symbols.h  extract_typedecls.cc  extract_typedecls.h  extract_typestmts.cc  extract_typestmts.h  module_table.h  post_processing.cc  post_processing.h  program_context.h  symbol_table.cc  symbol_table.h  type_table.h  visit_args.cc  visit_args.h  visit_expr.cc  visit_expr.h  visit_fns.cc  visit_fns.h  visit_imports.cc  visit_imports.h  visit_params.cc  visit_params.h  visit_s.cc  visit_s.h  visit_stmts.cc  visit_stmts.h  visit_type.cc  visit_type.h  visit_typeinit.cc  visit_typeinit.h  visit_vardef.cc  visit_vardef.h
src/nex_lang/symbols/: typed_expr.h  typed_id.h  typed_procedure.cc  typed_procedure.h  typed_variable.cc  typed_variable.h
src/nex_lang/types/: nl_type.cc  nl_type.h  nl_type_bool.cc  nl_type_bool.h  nl_type_char.cc  nl_type_char.h  nl_type_i32.cc  nl_type_i32.h  nl_type_none.cc  nl_type_none.h  nl_type_ptr.cc  nl_type_ptr.h  nl_type_struct.cc  nl_type_struct.h
src/program_representation/: assembly.cc  assembly.h  bin_op.cc  bin_op.h  code.h  code_builders.cc  code_clone.h  code_visit.h  label.cc  label.h  procedure.cc  procedure.h  pseudo_assembly.cc  pseudo_assembly.h  variable.cc  variable.h
src/program_representation/code_builders/: bin_op.cc  bin_op.h  comparators.cc  comparators.h  operators.cc  operators.h  while_loop.cc  while_loop.h
src/program_representation/code_structures/: assign_stmt.cc  assign_stmt.h  beq_label.cc  beq_label.h  block.cc  block.h  bne_label.cc  bne_label.h  call.cc  call.h  define_label.cc  define_label.h  expr.cc  expr.h  if_stmt.cc  if_stmt.h  module.cc  module.h  procedure.cc  procedure.h  program.cc  program.h  ret_stmt.cc  ret_stmt.h  scope.cc  scope.h  use_label.cc  use_label.h  var_access.cc  var_access.h  var_decl.cc  var_decl.h  var_def.h  word.cc  word.h
src/transformations/: elim_calls.cc  elim_calls.h  elim_if_stmts.cc  elim_if_stmts.h  elim_labels.cc  elim_labels.h  elim_ret_stmts.cc  elim_ret_stmts.h  elim_scopes.cc  elim_scopes.h  elim_vars.cc  elim_vars.h  elim_vars_proc.cc  elim_vars_proc.h  entry_exit.cc  entry_exit.h  flatten.cc  flatten.h  print.cc  print.h  visitor.cc  visitor.h  write_file.cc  write_file.h
src/utils/: reg.cc  reg.h  span_hash.h  state.cc  state.h  token.cc  token.h
tests/: CMakeLists.txt  custom_catch2.cc  test_compile.cc  test_elim_labels.cc  test_elim_vars.cc  test_errors.cc  test_factorial.cc  test_fibonacci.cc  test_flatten.cc  test_generate_code.cc  test_heap.cc  test_if_stmts_program.cc  test_lang.cc  test_lang_parsing.cc  test_lang_scanning.cc  test_list_module.cc  test_math_module.cc  test_max_munch.cc  test_modules.cc  test_operators.cc  test_parsing.cc  test_post_processing.cc  test_print_module.cc  test_run_program.cc  test_scanning.cc  test_string_module.cc  test_type_inference.cc  test_while_loop.cc  utils.cc  utils.h  word_to_uint.cc  word_to_uint.h
tests/nl_files/: fibonacci_module.nl  math_module.nl  print_module.nl  test_arr.nl  test_fibonacci.nl  test_heap.nl  test_max.nl  test_min.nl  test_print.nl  test_printchar.nl  test_println.nl  test_printnum.nl  test_type_mismatch_error.nl
tests/test_first_program/: main.cc
tests/test_flatten/: main.cc  makefile
